force-app/main/default/objects/SupplySiteDetail__c/SupplySiteDetail__c.object-meta.xml
<CustomObject>
    <label>納入サイト明細</label>
    <nameField>
        <displayFormat>SSD-{0000000000}</displayFormat>
        <label>納入サイト明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>