force-app/main/default/objects/SupplySiteDetail__c/fields/Consul__c.field-meta.xml
<CustomField>
    <fullName>Consul__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コンサル</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>納入サイト明細(コンサル)</relationshipLabel>
    <relationshipName>ConsulSupplySiteDetails</relationshipName>
    <type>Lookup</type>
</CustomField>