force-app/main/default/objects/SupplySiteDetail__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>納入年月日</label>
    <type>Date</type>
</CustomField>