force-app/main/default/objects/SupplySiteDetail__c/fields/KP__c.field-meta.xml
<CustomField>
    <fullName>KP__c</fullName>
    <label>納入場所・KP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>