force-app/main/default/objects/SupplySiteDetail__c/fields/MainContractor__c.field-meta.xml
<CustomField>
    <fullName>MainContractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元請社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>納入サイト明細 (元請社)</relationshipLabel>
    <relationshipName>ContractorSupplySiteDetails</relationshipName>
    <type>Lookup</type>
</CustomField>