force-app/main/default/objects/SupplySiteDetail__c/fields/MainType__c.field-meta.xml
<CustomField>
    <fullName>MainType__c</fullName>
    <label>代表型式</label>
    <length>20</length>
    <type>Text</type>
</CustomField>