force-app/main/default/objects/SupplySiteDetail__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカー</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>納入サイト明細 (メーカー)</relationshipLabel>
    <relationshipName>MakerSupplySiteDetails</relationshipName>
    <type>Lookup</type>
</CustomField>