force-app/main/default/objects/SupplySiteDetail__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>納入サイト</label>
    <referenceTo>SupplySite__c</referenceTo>
    <relationshipLabel>納入サイト明細</relationshipLabel>
    <relationshipName>SupplySiteDetails</relationshipName>
    <type>Lookup</type>
</CustomField>