force-app/main/default/objects/SupplySiteDetail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>納入製品</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>河川情報</fullName>
            </value>
            <value>
                <fullName>道路情報</fullName>
            </value>
            <value>
                <fullName>ダムコン・堰コン</fullName>
            </value>
            <value>
                <fullName>遠方制御</fullName>
            </value>
            <value>
                <fullName>道路ＴＭ</fullName>
            </value>
            <value>
                <fullName>河川ＴＭ</fullName>
            </value>
            <value>
                <fullName>放流警報</fullName>
            </value>
            <value>
                <fullName>ネットワーク</fullName>
            </value>
            <value>
                <fullName>水管理</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>CATV</fullName>
            </value>
            <value>
                <fullName>InsBuddy</fullName>
            </value>
            <value>
                <fullName>みなモニター</fullName>
            </value>
            <value>
                <fullName>ヘリサット</fullName>
            </value>
            <value>
                <fullName>県防災</fullName>
            </value>
            <value>
                <fullName>レーダ</fullName>
            </value>
            <value>
                <fullName>受変電</fullName>
            </value>
            <value>
                <fullName>ＣＶＣＦ</fullName>
            </value>
            <value>
                <fullName>換気制御</fullName>
            </value>
            <value>
                <fullName>料金機械</fullName>
            </value>
            <value>
                <fullName>自家発</fullName>
            </value>
            <value>
                <fullName>交通中央</fullName>
            </value>
            <value>
                <fullName>施設中央</fullName>
            </value>
            <value>
                <fullName>ＳＩＣ</fullName>
            </value>
            <value>
                <fullName>ETC/FF</fullName>
            </value>
            <value>
                <fullName>遠制</fullName>
            </value>
            <value>
                <fullName>画像処理</fullName>
            </value>
            <value>
                <fullName>移動無線</fullName>
            </value>
            <value>
                <fullName>ラジ再</fullName>
            </value>
            <value>
                <fullName>ハイラジ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>