force-app/main/default/objects/SupplySiteDetail__c/validationRules/SBUCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SBUCheck</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( SBU__c )  != TEXT( Parent__r.SBU__c )</errorConditionFormula>
    <errorDisplayField>SBU__c</errorDisplayField>
    <errorMessage>納入サイトと同一のSBUを設定してください。</errorMessage>
</ValidationRule>